--- a/Sample/Classes/SQDonationConfirmationViewController.xib
+++ b/Sample/Classes/SQDonationConfirmationViewController.xib
@@ -38,7 +38,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="191373211">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -57,6 +57,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{65, 0}, {174, 100}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="359283026"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<int key="IBUIContentMode">1</int>
@@ -72,6 +73,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 100}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="835300287"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -109,6 +111,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 145}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="403453104"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -145,6 +148,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 163}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="116499305"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -166,6 +170,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 190}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="169174563"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -187,6 +192,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 207}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="279407010"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -208,6 +214,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 231}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="82581734"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -229,6 +236,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 251}, {279, 21}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="314491031"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -250,6 +258,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 280}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="24810170"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -278,6 +287,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 327}, {279, 38}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="28731020"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -313,6 +323,7 @@
 												<int key="NSvFlags">274</int>
 												<string key="NSFrame">{{13, 0}, {261, 901}}</string>
 												<reference key="NSSuperview" ref="28731020"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="667554013"/>
 												<string key="NSReuseIdentifierKey">_NS:328</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -364,6 +375,7 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 										</object>
 										<string key="NSFrame">{{17, 380}, {286, 911}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="472856786"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -382,6 +394,8 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{163, 16}, {140, 40}}</string>
 												<reference key="NSSuperview" ref="667554013"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:225</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -415,6 +429,7 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{15, 16}, {140, 40}}</string>
 												<reference key="NSSuperview" ref="667554013"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="611155958"/>
 												<string key="NSReuseIdentifierKey">_NS:225</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -435,6 +450,7 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 										</object>
 										<string key="NSFrame">{{0, 1308}, {320, 284}}</string>
 										<reference key="NSSuperview" ref="262457236"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="708585084"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -446,6 +462,7 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 								</object>
 								<string key="NSFrame">{{0, 44}, {320, 1392}}</string>
 								<reference key="NSSuperview" ref="682148644"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="594542625"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -458,6 +475,7 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 						</object>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="262457236"/>
 						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -466,6 +484,8 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="682148644"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -802,7 +822,139 @@ bmF0ZWQgZm9yIHRoZSAyMDEyIGdlbmVyYWwgZWxlY3Rpb24uA</bytes>
 			<nil key="sourceID"/>
 			<int key="maxID">56</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">SQDonationConfirmationViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>agree:</string>
+							<string>disagree:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>agree:</string>
+							<string>disagree:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">agree:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">disagree:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>cityStateZip</string>
+							<string>donationAmount</string>
+							<string>email</string>
+							<string>employer</string>
+							<string>formView</string>
+							<string>legaleseView</string>
+							<string>name</string>
+							<string>occupation</string>
+							<string>scrollView</string>
+							<string>street</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UIScrollView</string>
+							<string>UILabel</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>cityStateZip</string>
+							<string>donationAmount</string>
+							<string>email</string>
+							<string>employer</string>
+							<string>formView</string>
+							<string>legaleseView</string>
+							<string>name</string>
+							<string>occupation</string>
+							<string>scrollView</string>
+							<string>street</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">cityStateZip</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">donationAmount</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">email</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">employer</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">formView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">legaleseView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">name</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">occupation</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">scrollView</string>
+								<string key="candidateClassName">UIScrollView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">street</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SQDonationConfirmationViewController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
