--- a/Sample/Classes/SQDonationFormViewController.xib
+++ b/Sample/Classes/SQDonationFormViewController.xib
@@ -36,7 +36,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="1029452679">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIScrollView" id="467333196">
@@ -52,6 +52,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{65, 0}, {174, 100}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="656366479"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<int key="IBUIContentMode">1</int>
@@ -67,6 +68,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 100}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="488036109"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -104,6 +106,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 144}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="400609101"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -140,6 +143,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 173}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="754201805"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -181,6 +185,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 239}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="34508180"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -209,6 +214,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 289}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="628236110"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -230,6 +236,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 315}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="601507055"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -269,6 +276,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 367}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="257986644"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -290,6 +298,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 391}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1014584116"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -320,6 +329,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 450}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="640080326"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -348,6 +358,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 499}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="603115512"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -369,6 +380,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 525}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="428418033"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -399,6 +411,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{23, 577}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="478033800"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -420,6 +433,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 601}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="770326526"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -449,6 +463,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 653}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="775683452"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -470,6 +485,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 679}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="774978728"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -499,6 +515,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{21, 731}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="694708341"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -520,6 +537,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{19, 755}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="747844243"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -550,6 +568,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 812}, {320, 35}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="544765840"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -578,6 +597,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 1015}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="485703780"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -599,6 +619,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 1039}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="942745030"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -629,6 +650,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{22, 1091}, {274, 21}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="186273027"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -650,6 +672,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{20, 1117}, {280, 44}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="53497957"/>
 										<string key="NSReuseIdentifierKey">_NS:304</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -683,6 +706,7 @@
 												<int key="NSvFlags">274</int>
 												<string key="NSFrame">{{13, 4}, {261, 131}}</string>
 												<reference key="NSSuperview" ref="544765840"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="20424111"/>
 												<string key="NSReuseIdentifierKey">_NS:328</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -711,6 +735,7 @@
 										</array>
 										<string key="NSFrame">{{15, 865}, {286, 139}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="867810428"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -728,6 +753,8 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{14, 18}, {286, 37}}</string>
 												<reference key="NSSuperview" ref="53497957"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:225</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -764,6 +791,7 @@
 										</array>
 										<string key="NSFrame">{{0, 1175}, {320, 443}}</string>
 										<reference key="NSSuperview" ref="533964486"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="842555778"/>
 										<string key="NSReuseIdentifierKey">_NS:196</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -775,6 +803,7 @@
 								</array>
 								<string key="NSFrameSize">{320, 1244}</string>
 								<reference key="NSSuperview" ref="467333196"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="225538516"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -787,6 +816,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1029452679"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="533964486"/>
 						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -795,6 +825,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="467333196"/>
 				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -1416,7 +1448,106 @@
 			<nil key="sourceID"/>
 			<int key="maxID">96</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">SQDonationFormViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="continuePressed:">id</string>
+						<string key="fieldDidBeginEditing:">id</string>
+						<string key="fieldDidChange:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="continuePressed:">
+							<string key="name">continuePressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="fieldDidBeginEditing:">
+							<string key="name">fieldDidBeginEditing:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="fieldDidChange:">
+							<string key="name">fieldDidChange:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="city">UITextField</string>
+						<string key="contributeButton">UIButton</string>
+						<string key="donationAmount">UITextField</string>
+						<string key="email">UITextField</string>
+						<string key="employer">UITextField</string>
+						<string key="formView">UIView</string>
+						<string key="legaleseView">UIView</string>
+						<string key="name">UITextField</string>
+						<string key="occupation">UITextField</string>
+						<string key="scrollView">UIScrollView</string>
+						<string key="state">UITextField</string>
+						<string key="street">UITextField</string>
+						<string key="zip">UITextField</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="city">
+							<string key="name">city</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contributeButton">
+							<string key="name">contributeButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="donationAmount">
+							<string key="name">donationAmount</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="email">
+							<string key="name">email</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="employer">
+							<string key="name">employer</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="formView">
+							<string key="name">formView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="legaleseView">
+							<string key="name">legaleseView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="name">
+							<string key="name">name</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="occupation">
+							<string key="name">occupation</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="state">
+							<string key="name">state</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="street">
+							<string key="name">street</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="zip">
+							<string key="name">zip</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SQDonationFormViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
